<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">Geodesic</string>

    <string-array name="menu_headers">
        <item>Actions</item>
        <item>Help</item>
    </string-array>
    <string-array name="actions_types">
        <item>Direct Problem</item>
        <item>Undirect Problem</item>
        <item>Delete all markers</item>
        <item>Clear pins</item>
        <item>Search Location</item>
        <item>Switch account</item>
    </string-array>
    <string-array name="help_items">
        <item>About</item>
    </string-array>

    <array name="nav_items_icons">
        <item>@drawable/ic_calc</item>
        <item>@drawable/ic_calc</item>
        <item>@drawable/ic_tool</item>
        <item>@drawable/ic_clear</item>
        <item>@drawable/ic_searh</item>
        <item>@drawable/ic_signout</item>
        <item>@drawable/ic_info</item>
    </array>

    <string name="map_terrain">Terrain</string>
    <string name="map_normal">Normal</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="undirect_geodesic">Undirect Geodesic Problem</string>
    <string name="direct_geodesic">Direct Geodesic Problem</string>
    <string name="drawer_open">Open Geodesic menu</string>
    <string name="drawer_close">Close Geodesic menu</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_about_program">About Program</string>
    <string name="action_settings">Map Types</string>
    <string name="description_refresh">Sync with server</string>
     <string name="description_tool">Delete mode</string>
    <string name="lat1">Latitude1:</string>
    <string name="lon1">Longitude1:</string>
    <string name="lat2">Latitude2:</string>
    <string name="lon2">Longitude2:</string>
    <string name="azi">Azimuth1:</string>
    <string name="dist">Distance:</string>
    <string name="result">Result:</string>
    <string name="nonres">No result</string>
    <string name="solve">Solve!</string>

</resources>