<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/description_refresh"/>
    <item
        android:id="@+id/map_menu"
        android:icon="@drawable/ic_layer"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/action_settings">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/map_terrain"
                    android:orderInCategory="1"
                    android:showAsAction="ifRoom"
                    android:title="@string/map_terrain"/>
                <item
                    android:id="@+id/map_normal"
                    android:orderInCategory="2"
                    android:showAsAction="ifRoom"
                    android:title="@string/map_normal"/>
                <item
                    android:id="@+id/map_hybrid"
                    android:orderInCategory="3"
                    android:showAsAction="ifRoom"
                    android:title="@string/map_hybrid"/>
            </group>
        </menu>
    </item>

</menu>